--- a/public/chat.html
+++ b/public/chat.html
@@ -15,7 +15,8 @@
  
             </div>
             <div class="chat__main">
-                <div id="messages" class="chat__messages"></div>
+                <div id="messages" class="chat__messages">
+                </div>
                 <div class="compose">
                 <form id="message-form">
                  <input  id="messageEmoji" name="message" placeholder="Wiadomość" required autocomplete="off">
@@ -27,6 +28,8 @@
                  <button >Wyślij</button>
                 </form>
                 <button id="send-location">Wyślij lokalizacje</button>
+                <button class="button2" onclick="location.href='https://klemczak-komunikator.herokuapp.com/'" type="button"> 
+                Opuść pokój</button2>
                 </div>
             </div>
         </div>
@@ -58,7 +61,8 @@
                     <li>{{username}}</li>
                     {{/users}}
                 </ul>
-        </script>
+                
+            </script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
