--- a/public/chat.html
+++ b/public/chat.html
@@ -29,7 +29,7 @@
                 </form>
                 <button id="send-location">Wyślij lokalizacje</button>
                 <button class="button2" onclick="location.href='https://klemczak-komunikator.herokuapp.com/'" type="button"> 
-                Opuść pokój</button2>
+                Opuść kanał</button2>
                 </div>
             </div>
         </div>
